--- a/UNIT-3/coding/weather.html
+++ b/UNIT-3/coding/weather.html
@@ -16,12 +16,12 @@
   let city = document.getElementById("city").value;
   try {
     let response = await fetch(
-      "https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=56a1b72457882c27f73c03f6543d0cf2"
+      `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=56a1b72457882c27f73c03f6543d0cf2`
     );
 
     let data = await response.json();
-    console.log('data:', data)
-    // console.log("data:", Math.round(data.main.temp - 273));
+    // console.log('data:', data)
+    console.log("data:", Math.round(data.main.temp - 273));
   } catch (err) {
     console.log("err:", err);
   }
