--- a/UNIT-2/week-3/coding/minAndMax.html
+++ b/UNIT-2/week-3/coding/minAndMax.html
@@ -51,12 +51,13 @@
       }
       .whole1 > button,
       input {
-        background-color: orange;
+        background-color: rgb(0, 4, 255);
         color: blanchedalmond;
         font-size: 40px;
       }
       #id1,
       #id3,
+      #id5,
       #id7,
       #id9 {
         background-color: green;
