some changes on js and css

--- a/UNIT-3/coding/youtube/youtube-homepage/YT.html
+++ b/UNIT-3/coding/youtube/youtube-homepage/YT.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    
+    <title>youtube.com</title>
+
     <link rel="stylesheet" href="YT.css" />
   </head>
   <body>
     <header class="header">
-      <a href="#">
+      <a href="YT.html">
         <img
           src="https://cdn.mos.cms.futurecdn.net/8gzcr6RpGStvZFA2qRt4v6-1200-80.jpg"
           alt=""
           class="youtube-logo"
         />
       </a>
+
+      
       <div class="search-box">
         <input
           class="search-videos"
