login password type changed

--- a/UNIT-3/coding/ES6II/google1/loginAndRegister.html
+++ b/UNIT-3/coding/ES6II/google1/loginAndRegister.html
@@ -86,7 +86,7 @@
                 Username:
                 <input type="text" id="inp7" />
                 Password:
-                <input type="text" id="inp8" />
+                <input type="password" id="inp8" />
 
                 <input type="submit" class="btn" />
             </form>
