home page changes

--- a/UNIT-3/coding/ES6II/google1/home.html
+++ b/UNIT-3/coding/ES6II/google1/home.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
+    <title>Home</title>
     <style>
       h1 {
-        color: red;
+        text-align: center;
+        font-size: 130px;
+        margin-top: 200px;
+        color: blue;
+        
       }
     </style>
   </head>
-  <body>
-    <center>
-      <h1>Welcome to the Home Page of Masai School</h1>
 
-     
+  <body>
+    <h1>WELCOME TO HOME PAGE</h1>
+
+    <center>
       <img
         src="https://img.icons8.com/emoji/48/000000/folded-hands-emoji-1.png"
       />
